Refactor codebase with production-grade improvements
- Add dedicated exception package with custom exceptions
- Implement Strategy pattern for credential validation
- Add AIConfiguration class for centralized config management
- Improve logging throughout with SLF4J
- Remove unnecessary comments and improve readability
- Simplify code structure following SOLID principles
- Update exception handling to use custom runtime exceptions

Co-authored-by: Sanjeev-Panday <32551150+Sanjeev-Panday@users.noreply.github.com>